# MALAYSIAN_ADDRESS_PARSER

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
scripts/: alamat_splitter.py  classifier.py  extract_pdf.py  main_driver_cukai.py  main_driver_penjaja.py  normalizer.py  postcode_state_extractor.py  pre_cleaner.py
src/malaysian_address_parser/: __init__.py  alamat_splitter.py  classifier.py  cli.py  excel_runner.py  normalizer.py  postcode_state_extractor.py  pre_cleaner.py
tests/: test_alamat_splitter.py  test_classifier.py  test_excel_runner.py  test_postcode_state_extractor.py  test_pre_cleaner.py
